Changes with APR-util 0.9.9

  *) Add support for Berkeley DB 4.4 to the configure scripts.
     [Garrett Rooney]

Changes with APR-util 0.9.7

  *) Fix apr_rmm_realloc() offset calculation bug.  [Keith Kelleman
     <keith.kelleman oracle.com>]

  *) Fix handling of a premature EOF with the FILE bucket; a new bucket
     is not inserted for each attempt to read past EOF.  PR 34708.
     [Jeff Trawick, Joe Orton]

  *) Fix build failure with non-threaded APR on AIX.  PR 34655.
     [Ryan Murray <rmurray+apache cyberhqz.com>]

  *) Backport the apr_reslist_timeout_set and apr_reslist_invalidate 
     functions already in APR 1.0.x. [Paul Querna]

  *) Fix linking problem on cygwin.  [Max Bowsher <maxb ukf.net>]

Changes with APR-util 0.9.6

  *) Fix the detection of ldap.h on Solaris - it needs lber.h to be
     defined first. [Graham Leggett]

  *) Add an RPM spec file. [Graham Leggett]

  *) Add a build script to create a solaris package. [Graham Leggett]

  *) Add support for Berkeley DB 4.3.  [Jani Averbach <jaa jaa.iki.fi>]

Changes with APR-util 0.9.5

  *) Guarantee and require default address alignment for block offsets
     within segments in the apr_rmm interface.  PR 29873.  [Joe Orton]

  *) SECURITY: CAN-2004-0786 (cve.mitre.org)
     Fix input validation in apr_uri_parse() to avoid passing negative
     length to memcpy for malformed IPv6 literal addresses.
     [Joe Orton]

  *) Fix build issues in paths containing symlinks.  PR 8867.
     [Joe Orton]

  *) Fix corrupt output from the apr_xlate_* interfaces on AIX 4.x.
     [Joe Orton]

  *) Change the order in which ldap.h and lber.h are defined, to fix
     a compile bug in Solaris v2.8 which requires lber.h then ldap.h.
     PR 27379.  [Andrew Connors <andy.connors idea.com>]
 
  *) Restore support for SHA1 passwords in apr_validate_password.
     PR 17343.  [Paul Querna <chip force-elite.com>]

  *) Fix DESTDIR install for bundled expat library.  PR 14076
     [David S. Madole <david madole.net>]
