@@ -21,8 +21,7 @@ do
   shift
 done
 
-if test -d "$apr_src_dir"
-then
+if [ -f "$apr_src_dir/build/apr_common.m4" ]; then
   echo ""
   echo "Looking for apr source in $apr_src_dir"
 else
@@ -61,7 +60,7 @@ fi
 #
 # If Expat has been bundled, then go and configure the thing
 #
-if test -d xml/expat; then
+if [ -f xml/expat/buildconf.sh ]; then
   echo "Invoking xml/expat/buildconf.sh ..."
   (cd xml/expat; ./buildconf.sh)
 fi
