@@ -1,5 +1,11 @@
 Changes with APR-util 0.9.9
 
+  *) Fix VPATH builds, and symlink builds where apr and apr-util 
+     reside in parallel as symlinks to directories with more explicit
+     names, e.g. apr-1.x and apr-util-1.x.  This solves various breakage
+     on Solaris in particular with ./buildconf and ./configure.
+     [William Rowe]
+
   *) Add support for Berkeley DB 4.4 to the configure scripts.
      [Garrett Rooney]
 
